--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,27 @@ footer{
 
 }
 
+.fade-in{
+    opacity: 0;
+    transition: opacity .5s ease-in;
+}
+.fade-in.appear{
+    opacity: 1;
+}
+.from-left{
+    transform: translateX(-50%);
+}
+.from-right{
+    transform: translateX(50%);
+}
+.from-left,
+.from-right{
+    transition: transform .5s ease-in;
+}
+.from-left.appear,
+.from-right.appear{
+    transform: translateX(0);
+}
 @media (min-width: 1000px){
     .split{
         flex-direction: row;
